Add automatic token refresh with Discord notifications

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^24.34.0"
   },
   "engines": {
     "node": ">=18.0.0"
